# sandbox

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODEBASE_ANALYSIS.md  README.md  WORKSPACE  build.bat  conanfile.py  run_streaming.sh  vcpkg-configuration.json  vcpkg.json
ai/ai_common/: CMakeLists.txt  neural_network.cpp  neural_network.hpp
ai/ai_pong/: CMakeLists.txt  main.cpp  pong_scene.cpp  pong_scene.hpp
gp/: CMakeLists.txt
gp/_tests/: CMakeLists.txt
gp/_tests/sdl_tests/: scene_3d_tests.cpp
gp/_tests_/: CMakeLists.txt
gp/_tests_/event_tests/: event_tests.cpp
gp/_tests_/sdl_tests/: scene_3d_tests.cpp
gp/_tests_/utils/: utils.cpp  utils.hpp
gp/common/: user_input.hpp
gp/ffmpeg/: ffmpeg.cpp  ffmpeg.hpp  misc.cpp  misc.hpp
gp/gl/: buffer_object.cpp  buffer_object.hpp  buffer_objects.cpp  buffer_objects.hpp  gl.hpp  misc.cpp  misc.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture_object.cpp  texture_object.hpp  texture_objects.cpp  texture_objects.hpp  vertex_array_object.cpp  vertex_array_object.hpp  vertex_array_objects.cpp  vertex_array_objects.hpp
gp/glfw/: application.cpp  application.hpp  glfw.cpp  glfw.hpp  misc.cpp  misc.hpp  scene_gl.cpp  scene_gl.hpp  scene_gl_fwd.hpp
gp/glfw/internal/: glfw_context.cpp  glfw_context.hpp  glfw_context_fwd.hpp  glfw_window.cpp  glfw_window.hpp  glfw_window_fwd.hpp  misc.cpp  misc.hpp  user_input_state.hpp
gp/json/: misc.cpp  misc.hpp
gp/math/: math.cpp  math.hpp
gp/misc/: event.cpp  event.hpp  event_fwd.hpp  keyboard_state.cpp  keyboard_state.hpp
gp/sdl/: animation.cpp  animation.hpp  gl_context.cpp  gl_context.hpp  keyboard_state.cpp  keyboard_state.hpp  misc.cpp  misc.hpp  renderer.cpp  renderer.hpp  scene_2d.cpp  scene_2d.hpp  scene_2d_fwd.hpp  scene_3d.cpp  scene_3d.hpp  sdl.hpp  system.cpp  system.hpp  user_event.hpp  window.cpp  window.hpp
gp/sdl/internal/: gl_context.cpp  gl_context.hpp  misc.cpp  misc.hpp  sdl_context.cpp  sdl_context.hpp  sdl_context_fwd.hpp  sdl_renderer.cpp  sdl_renderer.hpp  sdl_renderer_fwd.hpp  sdl_window.cpp  sdl_window.hpp  sdl_window_fwd.hpp
gp/utils/: utils.cpp  utils.hpp
gp_examples/glfw/glfw_application_example/: CMakeLists.txt  main.cpp
loaders/loaders_assimp/: CMakeLists.txt  assimp.hpp  main.cpp  model.cpp  model.hpp  model_format.cpp  model_format.hpp  model_orientation.cpp  model_orientation.hpp  model_scene.cpp  model_scene.hpp  renderer.cpp  renderer.hpp
loaders/loaders_assimp/data/: model.glb
loaders/loaders_assimp/shaders/: shader_program.fs  shader_program.vs
loaders/loaders_cgltf/: CMakeLists.txt  cgltf_impl.cpp  main.cpp  model.cpp  model.hpp  model_scene.cpp  model_scene.hpp
projects/assimp_loader/: CMakeLists.txt
projects/streaming/: CMakeLists.txt
projects/wolf/: BUILD  CMakeLists.txt  main.cpp  map_renderer.cpp  map_renderer.hpp  player_state.cpp  player_state.hpp  raw_map.cpp  raw_map.hpp  raw_map_from_ascii.cpp  raw_map_from_ascii.hpp  raw_map_from_wolf.cpp  raw_map_from_wolf.hpp  renderer.cpp  renderer.hpp  vector_map.cpp  vector_map.hpp  wolf_map_info.hpp  wolf_renderer.cpp  wolf_renderer.hpp
streaming/: CMakeLists.txt
streaming/streaming_common/: CMakeLists.txt  common.hpp  constants.hpp  decoder.cpp  decoder.hpp  decoder_fwd.hpp  encoder.cpp  encoder.hpp  encoder_fwd.hpp  frame_data.hpp  opengl.hpp  pipeline_stats.hpp  stream_package_header.hpp  utils.cpp  utils.hpp  video_stream_info.hpp
streaming/streaming_encode_decode/: CMakeLists.txt  decode.cpp  decode.hpp  decode_scene.cpp  decode_scene.hpp  encode.cpp  encode.hpp  encode_scene.cpp  encode_scene.hpp  fullscreen_texture_gl_scene.cpp  fullscreen_texture_gl_scene.hpp  gl.cpp  gl.hpp  gl_scene.cpp  gl_scene.hpp  main.cpp  rgb_cube_gl_scene.cpp  rgb_cube_gl_scene.hpp
streaming/streaming_receiver/: CMakeLists.txt  decode_scene.cpp  decode_scene.hpp  main.cpp  player.cpp  player.hpp  receiver.cpp  receiver.hpp
streaming/streaming_signaling_server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp  server.hpp
streaming/streaming_streamer/: CMakeLists.txt  encode_scene.cpp  encode_scene.hpp  main.cpp  renderer.cpp  renderer.hpp  streamer.cpp  streamer.hpp
tools/: BUILD  CMakeLists.txt
tools/common/: user_input.hpp
tools/math/: math.cpp  math.hpp
tools/sdl/: sdl.cpp  sdl.hpp  sdl_animation.cpp  sdl_animation.hpp  sdl_gl_context.cpp  sdl_gl_context.hpp  sdl_keyboard_state.cpp  sdl_keyboard_state.hpp  sdl_renderer.cpp  sdl_renderer.hpp  sdl_system.cpp  sdl_system.hpp  sdl_window.cpp  sdl_window.hpp
tools/utils/: utils.cpp  utils.hpp
wolf/: CMakeLists.txt
wolf/data/: AUDIOHED.WL6  AUDIOT.WL6  CONFIG.WL6  GAMEMAPS.WL6  MAPHEAD.WL6  VGADICT.WL6  VGAGRAPH.WL6  VGAHEAD.WL6  VSWAP.WL6  map1.map  map2.map  map3.map
wolf/wolf_common/: CMakeLists.txt  map_renderer.cpp  map_renderer.hpp  map_utils.cpp  map_utils.hpp  player_state.cpp  player_state.hpp  raw_map.cpp  raw_map.hpp  raw_map_from_ascii.cpp  raw_map_from_ascii.hpp  raw_map_from_wolf.cpp  raw_map_from_wolf.hpp  renderer.cpp  renderer.hpp  vector_map.cpp  vector_map.hpp  vswap_file.cpp  vswap_file.hpp  wolf_renderer.cpp  wolf_renderer.hpp  wolf_scene.cpp  wolf_scene.hpp
wolf/wolf_geometry_test/: CMakeLists.txt  geometry_test_scene.cpp  geometry_test_scene.hpp  main.cpp  raycaster.cpp
wolf/wolf_multithread/: CMakeLists.txt  main.cpp  multi_thread_wolf_scene.cpp  multi_thread_wolf_scene.hpp  wolf_renderer_multithread.cpp  wolf_renderer_multithread.hpp
wolf/wolf_raycaster/: CMakeLists.txt  main.cpp  raycaster.cpp  raycaster.hpp  raycaster_scene.cpp  raycaster_scene.hpp
wolf/wolf_singlethread/: CMakeLists.txt  main.cpp  single_thread_wolf_scene.cpp  single_thread_wolf_scene.hpp  wolf_renderer_singlethread.cpp  wolf_renderer_singlethread.hpp
wolf/wolf_sprite_voxelizer/: CMakeLists.txt  main.cpp  sprite_voxelizer.cpp  sprite_voxelizer.hpp  voxel_scene.cpp  voxel_scene.hpp
wolf/wolf_vswap_file_viewer/: CMakeLists.txt  main.cpp  vswap_file_viewer_scene.cpp  vswap_file_viewer_scene.hpp
(+93 files in other folders)
